# Polygame-V2

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
engine/: CMakeLists.txt
engine/includes/glad/: glad.h
engine/src/: polygame.cpp  polygame.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  test.cpp  test.h  window.cpp  window.h
engine/src/classes/: object.cpp  object.h  shader.cpp  shader.h
engine/src/classes/gameplay/: player.cpp  player.h
engine/src/utilities/: draw_info.h  glad.c
shaders/: default_fragment.frag
